# segappend

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  deno.json
crate/: Cargo.toml  build.rs
src/: lib.rs  main.cc
